--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,10 @@ opt-level = "z"
 anyhow       = "=1.0.95"
 embedded-svc = "=0.28.1"
 esp-idf-svc  = "=0.50.1"
-thiserror = "2.0.16"
 serde = { version = "1.0.226", features = ["derive"] }
 serde_json = "1.0.145"
 chrono = "0.4.41"
+dotenv_codegen = "0.15"
 
 [build-dependencies]
 embuild  = "=0.33.0"
