--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,18 @@
 [package]
-name = "http-client"
+name = "esp32c3-time-relay"
 version = "0.1.0"
-authors = [
-    "Anatol Ulrich <anatol.ulrich@ferrous-systems.com>",
-    "Sergio Gasquez <sergio.gasquez@gmail.com>",
-]
 edition = "2021"
 resolver = "2"
 
 [[bin]]
-name = "http-client"
-harness = false # We can't use the default rust libtest harness for a crosscompile target
+name = "esp32c3-time-relay"
+harness = false
 
 [profile.release]
 opt-level = "s"
 
 [profile.dev]
-debug     = true # Symbols are nice and they don't increase the size on Flash
+debug     = true
 opt-level = "z"
 
 [dependencies]
