--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,11 @@ opt-level = "z"
 anyhow       = "=1.0.95"
 embedded-svc = "=0.28.1"
 esp-idf-svc  = "=0.50.1"
-serde = { version = "1.0.226", features = ["derive"] }
+serde = { version = "1.0.226", features = ["derive"]}
 serde_json = "1.0.145"
 chrono = "0.4.41"
 dotenv_codegen = "0.15"
+uuid = { version = "1.18.1", features = ["v4"] }
 
 [build-dependencies]
 embuild  = "=0.33.0"
