--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0.145"
 chrono = "0.4.41"
 dotenv_codegen = "0.15"
 uuid = { version = "1.18.1", features = ["v4"] }
+log = "0.4.28"
 
 [build-dependencies]
 embuild  = "=0.33.0"
